# dwappsversion

./: CMakeLists.txt  dwappversions.kdev4  main.cpp
